# ComputerAgent

./: .env.example  .gitignore  CHANGES.md  README.md  docker-compose.yml  error-litellm-ratelimiterror-azureexcep-iridescent-quokka copy.md  error-litellm-ratelimiterror-azureexcep-iridescent-quokka.md  improvement.md  pyproject.toml  run.py  understand-this-project-and-indexed-milner.md
computer_agent/: __init__.py  config.py  coordinator.py  logging_setup.py  main.py
computer_agent/abilities/: __init__.py  autonomy.py  engine.py
computer_agent/abilities/rules/: default.yaml
computer_agent/daemon/: __init__.py  api.py  app.py  chat.py  client.py
computer_agent/daemon/web/: index.html
computer_agent/hitl/: __init__.py  approval_ui.py  checkpoint.py
computer_agent/llm/: __init__.py  base.py  context_manager.py  errors.py  registry.py
computer_agent/llm/providers/: __init__.py  anthropic.py  google.py  litellm.py  openai.py
computer_agent/memory/: __init__.py  embeddings.py  store.py
computer_agent/memory/migrations/: 001_initial.sql  002_tasks.sql
computer_agent/notify/: __init__.py  notifier.py
computer_agent/runtime/: __init__.py  event_bus.py  progress.py  router.py
computer_agent/scheduler/: __init__.py  service.py
computer_agent/skills/: __init__.py  executor.py  loader.py
computer_agent/taskmgr/: __init__.py  control.py  manager.py  models.py
computer_agent/tools/: __init__.py  agent_control.py  base.py  registry.py
computer_agent/tools/api/: __init__.py  http_call.py
computer_agent/tools/browser/: __init__.py  actions.py
computer_agent/tools/filesystem/: __init__.py  operations.py
computer_agent/tools/screen/: __init__.py  keyboard.py  mouse.py  screenshot.py
computer_agent/tools/shell/: __init__.py  exec_command.py
skills/summarize_directory/: skill.yaml
skills/web_research/: skill.yaml
tests/: test_abilities.py  test_context_manager.py  test_filesystem_tools.py  test_llm_providers.py  test_llm_registry.py  test_llm_retry.py  test_registry.py  test_screenshot.py
